css/index.css
.header .top {
    height: 52px;
    background-color: var(--secondary-theme-color);
}

.header .top .wrapper {
    justify-content: flex-end;
}

.header .top .wrapper ul{
    display: flex;
    position: relative;
}

.header .top .wrapper ul li{
    padding: 0 15px;
    
    /* border-right: 1px solid #999; */
}

.header .top .wrapper ul li a{
    color: #fff;
    font-size: 14px;
    /* background-color: aqua; */
}

.header .top .wrapper ul li a:hover{
    color: var(--main-theme-color);
}

.header .top .wrapper ul i {
    position: absolute;
    top: 0;
    right: 0;
    
    font-size: 15px;
}

.header .bottom {
    padding: 22px 0;
    /* display: flex; */
  }

.header .bottom .wrapper {
    display: flex;
    justify-content: space-between;
}

.header .logo {
    width: 200px;
    height: 88px;
    background: pink;
}

.header .logo a {
    display: block;
    height: 88px;
    background: url(../images/logo.png);
    /* 1. 隐藏文字 */
    /* font-size: 0; */
    /* 2. 隐藏文字 淘宝  小米方法 */
    text-indent: -9999em;
    overflow: hidden;
}

.header .nav {
    display: flex;
    margin: 25px 0 0 41px;
    /* background-color: pink; */
}

.header .nav li a{
    margin-right: 42px;
    /* background-color: #fff; */

    line-height: 42px;
}

.header .nav li a:hover{
    color: var(--main-theme-color);
    border-bottom: 2px solid var(--main-theme-color);
}

.header .search {
    position: relative;
    width: 220px;
    height: 40px;
    margin-top: 22px;
    /* background-color: aqua; */
}

.search input {
    width: 170px;
    height: 40px;
    padding-left: 28px;
    border-bottom: 2px solid #F4F4F4;

    transition: all .3s;
}

.search i {
    position: absolute;
    left: 0;
    top: 5px;

    font-size: 20px;
    color: #ccc;
    
    cursor: pointer;/* 鼠标变成小手 */
}

/* 修改 placeholder 里面的文字样式 */
.search input::placeholder {
    color: #ccc;
}
  
  /* input获得光标 */
.search input:focus {
    width: 220px;
}

.cart {
    position: relative;
    margin: 20px 0 0 15px;
}

.cart .iconfont {
    font-size: 36px;
}
  
.cart .cartnum {
    position: absolute;
    top: 0;
    left: 22px;

    padding: 0 8px;
    background-color: #E26237;
    color: #fff;
    border-radius: 11px;
}

.footer {
    height: 582px;
    background-color: #F5F5F5;
}

.footer .flood1 {
    padding: 60px 0;
    border-bottom: 1px solid #E8E8E8;
}

.footer .flood1 ul {
    display: flex;
  /* 缝隙相同 */
    justify-content: space-evenly;
}

.footer .flood1 ul li {
    display: flex;
  /* width: 190px; */
    height: 58px;
  /* background-color: pink; */
}

.footer .flood1 li h5 {
    width: 58px;
    height: 58px;
    margin-right: 20px;
    background: url(../images/sprite.png);
    
    text-indent: -999em;
    overflow: hidden;

    transition: all .3s;
}

.footer .flood1 li:nth-child(2) h5 {
    background-position: 0 -58px;
  }
  
.footer .flood1 li:nth-child(2) h5:hover {
    background-position: 0 -116px;
}

.footer .flood1 li:nth-child(3) h5 {
    background-position: 0 -116px;
}
  
.footer .flood1 li:nth-child(4) h5 {
    background-position: 0 -174px;
}

.footer .flood1 ul li p {
    font-size: 28px;
    line-height: 58px;
}

